# aoc

./: .gitignore  Cargo.toml  README.md
a_regular_map/: Cargo.toml
a_regular_map/src/: main.rs
alchemical_reduction/: Cargo.toml
alchemical_reduction/src/: main.rs
beverage_bandits/: Cargo.toml
beverage_bandits/src/: main.rs
chocolate_charts/: Cargo.toml
chocolate_charts/src/: main.rs
chronal_calibration/: Cargo.toml
chronal_calibration/src/: main.rs
chronal_charge/: Cargo.toml
chronal_charge/src/: main.rs
chronal_classification/: Cargo.toml
chronal_classification/src/: main.rs
chronal_conversion/: Cargo.toml
chronal_conversion/src/: main.rs
chronal_coordinates/: Cargo.toml
chronal_coordinates/src/: main.rs
experimental_emergency_teleportation/: Cargo.toml
experimental_emergency_teleportation/src/: main.rs
fabric_slicing/: Cargo.toml
fabric_slicing/src/: main.rs
four_dimensional_adventure/: Cargo.toml
four_dimensional_adventure/src/: main.rs
go_with_the_flow/: Cargo.toml  input_optimized.txt
go_with_the_flow/src/: main.rs
immune_system_simulator_20xx/: Cargo.toml
immune_system_simulator_20xx/src/: main.rs
inventory_management_system/: Cargo.toml
marble_mania/: Cargo.toml
marble_mania/src/: main.rs
memory_maneuver/: Cargo.toml
mine_cart_madness/: Cargo.toml
mode_maze/: Cargo.toml
repose_record/: Cargo.toml
reservoir_research/: Cargo.toml
settlers_of_the_north_pole/: Cargo.toml
stars_align/: Cargo.toml
subterranean_sustainability/: Cargo.toml
sum_of_its_parts/: Cargo.toml
util/: Cargo.toml
(+14 files in other folders)
