[workspace]

members = [
    "util",
    "chronal_calibration",
    "inventory_management_system",
    "fabric_slicing",
    "repose_record",
    "alchemical_reduction",
    "chronal_coordinates",
    "sum_of_its_parts",
    "memory_maneuver",
    "marble_mania",
    "stars_align",
    "chronal_charge",
    "subterranean_sustainability",
    "mine_cart_madness",
    "chocolate_charts",
    "beverage_bandits",
    "chronal_classification",
    "reservoir_research",
    "settlers_of_the_north_pole",
    "go_with_the_flow",
    "a_regular_map",
    "chronal_conversion",
    "mode_maze",
    "experimental_emergency_teleportation",
    "immune_system_simulator_20xx",
    "four_dimensional_adventure",
]
